lib_LIBRARIES=libgbase.a

#libgbase_a_CPPFLAGS=-pg

libgbase_a_SOURCES = gene.h gene.cc \
					operation.h operation.cc \
					chrm.h chrm.cc \
					linear_chrm.h linear_chrm.cc \
					circular_chrm.h circular_chrm.cc \
					common.h common.cc \
					genome_base.h genome_base.cc \
					extremity.h extremity.cc \
					adjacency.h adjacency.cc \
					item.h item.cc
